--- a/Resenhas/Resenhas/templates/Resenhas/navbar.html
+++ b/Resenhas/Resenhas/templates/Resenhas/navbar.html
@@ -8,7 +8,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{% url 'posts:post-list' %}">Posts</a>
+            <a class="nav-link" aria-current="page" href="" hidden></a>
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
