--- a/Resenhas/Resenhas/templates/Resenhas/navbar.html
+++ b/Resenhas/Resenhas/templates/Resenhas/navbar.html
@@ -1,57 +1,65 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container">
-      <a class="navbar-brand" href="{% url 'home-page' %}">Resenhas</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="" hidden></a>
-          </li>
-          {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="">Meus QRs</a>
-          </li>
-          {% else %}
-          {% endif %}
-          <li class="nav-item dropdown" hidden>
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" hidden>
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item" hidden>
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-          {% if user.is_authenticated %}
-          <li class="nav-item d-flex">
-            <form method="post" action="{% url 'logout' %}">
-                {% csrf_token %}
-                <button class="btn">Log Out</button>
-            </form>
-          </li>
-          {% else %}
-          
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-    </div>
-  </nav> 
+<nav class="navbar navbar-expand-lg bg-body-secondary">
+	<div class="container">
+		<a class="navbar-brand" href="{% url 'home-page' %}">Resenhas</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link" aria-current="page" href="" hidden></a>
+				</li>
 
+				<li class="nav-item dropdown" hidden>
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						aria-expanded="false">
+						Dropdown
+					</a>
+					<ul class="dropdown-menu" hidden>
+						<li><a class="dropdown-item" href="#">Action</a></li>
+						<li><a class="dropdown-item" href="#">Another action</a></li>
+						<li>
+							<hr class="dropdown-divider">
+						</li>
+						<li><a class="dropdown-item" href="#">Something else here</a></li>
+					</ul>
+				</li>
+				<li class="nav-item" hidden>
+					<a class="nav-link disabled" aria-disabled="true">Disabled</a>
+				</li>
+			</ul>
+			<ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+				{% if user.is_authenticated %}
+
+			
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+						aria-expanded="false">
+						{{user.get_username}}
+					</a>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="{% url 'reviews:user-review-list' %}">Minhas Resenhas</a></li>
+						<li>
+							<hr class="dropdown-divider">
+						</li>
+						<li><form class="dropdown-item" method="post" action="{% url 'logout' %}">
+							{% csrf_token %}
+							<button class="btn">Log Out</button>
+						</form></li>
+					</ul>
+				</li>
+
+				{% else %}
+
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'login' %}">Login</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'register' %}">Sign Up</a>
+				</li>
+				{% endif %}
+			</ul>
+		</div>
+	</div>
+</nav>
