--- a/Resenhas/reviews/templates/reviews/user_review_list.html
+++ b/Resenhas/reviews/templates/reviews/user_review_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<h3>Resenhas</h3>
+<h3>Minhas Resenhas</h3>
 
 <br>
 <div class="container">
@@ -57,7 +57,8 @@
 
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button class="btn btn-secondary" href="{% url 'reviews:review-create' %}">Criar</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
