--- a/Resenhas/reviews/templates/reviews/user_review_list.html
+++ b/Resenhas/reviews/templates/reviews/user_review_list.html
@@ -2,16 +2,14 @@
 {% load static %}
 
 {% block content %}
-<h3>Minhas Resenhas</h3>
+
+<h2>Olá, {{user.get_username}}!</h2>
+
 
 <br>
 <div class="container">
 
-    {% if user.is_authenticated %}
-    <a href="{% url 'reviews:review-create' %}" class="btn btn-primary">Escrever resenha</a>
-    {% else %}
-    <a href="{% url 'login' %}" class="btn btn-primary">Escrever resenha</a>
-    {% endif %}
+    <a href="{% url 'reviews:review-create' %}" class="btn btn-success">Escrever resenha</a>
     <br>
     <br>
 
