outline no botão de criar e texto do botão de submit para publicar

--- a/Resenhas/reviews/templates/reviews/user_review_list.html
+++ b/Resenhas/reviews/templates/reviews/user_review_list.html
@@ -9,7 +9,7 @@
 <br>
 <div class="container">
 
-    <a href="{% url 'reviews:review-create' %}" class="btn btn-success">Escrever resenha</a>
+    <a href="{% url 'reviews:review-create' %}" class="btn btn-outline-primary">Escrever resenha</a>
     <br>
     <br>
 
