--- a/Resenhas/Resenhas/templates/Resenhas/index.html
+++ b/Resenhas/Resenhas/templates/Resenhas/index.html
@@ -15,9 +15,9 @@
   <div class="row justify-content-evenly">
     <a href="{% url 'reviews:review-list' %}" class="btn btn-primary col-md-3">Ler resenhas</a>
     {% if user.is_authenticated %}
-    <a href="{% url 'reviews:review-create' %}" class="btn btn-success col-md-3">Escrever resenha</a>
+    <a href="{% url 'reviews:review-create' %}" class="btn btn-outline-primary col-md-3">Escrever resenha</a>
     {% else %}
-    <a href="{% url 'login' %}" class="btn btn-primary col-md-3">Escrever resenha</a>
+    <a href="{% url 'login' %}" class="btn btn-outline-primary col-md-3">Escrever resenha</a>
     {% endif %}
     
   </div>
