--- a/Resenhas/reviews/templates/reviews/review_list_all.html
+++ b/Resenhas/reviews/templates/reviews/review_list_all.html
@@ -8,9 +8,9 @@
 <div class="container">
 
     {% if user.is_authenticated %}
-    <a href="{% url 'reviews:review-create' %}" class="btn btn-success">Escrever resenha</a>
+    <a href="{% url 'reviews:review-create' %}" class="btn-outline-primary">Escrever resenha</a>
     {% else %}
-    <a href="{% url 'login' %}" class="btn btn-success">Escrever resenha</a>
+    <a href="{% url 'login' %}" class="btn-outline-primary">Escrever resenha</a>
     {% endif %}
     <br>
     <br>
